# my_portfolio

./: index.html
css/: style.css
execgant/: README.md  pyproject.toml
execgant/app/: config.py  dependencies.py  main.py  util.py
execgant/app/clients/: db.py
execgant/app/models/: emp_search_req_model.py  emp_search_response_model.py
execgant/app/services/: employee_search.py  ml_service.py
execgant/test_codes/: test_file.py
js/: custom.js
