[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Siva Nagarajan"]
readme = "README.md"
packages = [
    { include = "app"}
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
pydantic = "^2.10.3"
greenlet = "^3.1.1"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
sqlalchemy = "^2.0.36"
sentence-transformers = "^3.3.1"
pydantic-settings = "^2.6.1"
boto3 = "^1.35.76"
numpy = "^2.1.3"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
uvicorn = "0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
